# FuelLib

./: .gitignore  CHANGES.md  README.md  development.html  fuelprops.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sourcecode.html  tutorials-basic.html  tutorials-cli.html  tutorials-custom-fuels.html  tutorials-export-converge.html  tutorials-export-pele.html  tutorials-export4converge.html  tutorials-export4pele.html  tutorials.html
.github/workflows/: ci.yml  documentation.yml
_sources/: development.rst.txt  fuelprops.rst.txt  tutorials-basic.rst.txt  tutorials-custom-fuels.rst.txt
docs/: conf.py  development.rst  fuelprops.rst  index.rst  sourcecode.rst  tutorials-basic.rst  tutorials-cli.rst  tutorials-custom-fuels.rst  tutorials-export-converge.rst  tutorials-export-pele.rst  tutorials-export4converge.rst  tutorials-export4pele.rst  tutorials.rst
fuelData/: dataReferences.md
fuelData/gcData/: posf4658_init.csv
fuelData/propertiesData/: posf10325.csv
fuellib/: __init__.py  _data_locator.py  build_docs.py  clean_docs.py  constants.py  convert.py  format_code.py  fuel.py  utilities.py
fuellib/cli/: __init__.py  build_docs.py  clean_docs.py  format_code.py  fuel_manager.py  plotting.py  temp_converter.py  transport_props_converter.py
fuellib/data/: __init__.py
fuellib/data/fuelData/: __init__.py  fuel_metadata.yaml
fuellib/data/fuelData/gcData/: __init__.py  decane_init.csv  dodecane_init.csv  hefa-S1_init.csv  hefa-WE-SAF-262714_init.csv  hefa-came_init.csv  hefa-mfat_init.csv  hefa-tall_init.csv  heptane-decane_init.csv  heptane_init.csv  jet-a_init.csv  posf10264_T30_init.csv  posf10264_init.csv  posf10289_init.csv  posf10325_init.csv  posf11498_init.csv  posf4658_init.csv
fuellib/data/fuelData/groupDecompositionData/: __init__.py  hefa-S1.csv  hefa-WE-SAF-262714.csv  hefa.csv  jet-a.csv  refCompounds.csv
fuellib/data/fuelData/propertiesData/: __init__.py  hefa-S1.csv  hefa-WE-SAF-262714.csv  posf10264.csv  posf10289.csv
fuellib/data/gcmTableData/: __init__.py
fuellib/exporters/: __init__.py  converge.py  pele.py
fuellib/utilities/: fuel_manager.py  plotting.py  temp_converter.py  transport_props_converter.py
gcmTableData/: gcmTable.csv
source/: FuelLib.py  distillation.py
tests/: get_pred_and_data.py  test_accuracy.py  test_api.py  test_api_contract.py  test_baseline.py  test_exporters.py  test_fuellib_functions.py  test_hc_identification.py  test_source_docstrings.py  test_utilities.py
tests/baselinePredictions/: decane.csv  dodecane.csv  generate_baseline.py  heptane.csv  posf10264.csv  posf10289.csv  posf10325.csv
tutorials/: basic.py  compositionPlots.py  customFuel.py  hefaBlends.py  mixtureProperties.py
