[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fuellib"
version = "0.1.0"
description = "FuelLib: A Python library for Group Contribution Method (GCM) calculations of fuel properties"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "NLR", email = "david.montgomery@nlr.gov"},
]
requires-python = ">=3.8"
keywords = ["fuel", "thermodynamics", "group-contribution", "properties"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.0.0",
    "scipy>=1.5.0",
    "importlib-resources>=5.0; python_version < '3.9'",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "pytest>=6.0",
    "matplotlib>=3.0",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "sphinxcontrib-bibtex>=2.0",
]

[project.scripts]
fl-export-converge = "fuellib.exporters.converge:main"
fl-export-pele = "fuellib.exporters.pele:main"
fl-build-docs = "fuellib.build_docs:main"
fl-clean-docs = "fuellib.clean_docs:main"
fl-format = "fuellib.format_code:main"

[project.urls]
Repository = "https://github.com/NatLabRockies/FuelLib"
Issues = "https://github.com/NatLabRockies/FuelLib/issues"
Documentation = "https://NatLabRockies.github.io/FuelLib"

[tool.setuptools]
packages = ["fuellib", "fuellib.exporters"]

[tool.setuptools.package-data]
fuellib = [
    "data/**/*.csv",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
